Minor changes to gc flags